# alrimjang

./: .env.example  .gitignore  LICENSE  README.md  data.example.json  data.schema.json  dday.json  main.py  pyproject.toml  school_holidays.json  timetable.json  user_guide.md
alrimjang/: __init__.py  cli.py  data.py  dday.py  renderer.py  school_meal.py  timetable.py  weather.py  web.py
alrimjang/templates/: index.html  notice.html.j2
