[project]
name = "alrimjang"
version = "0.2.0"
description = "학교 알림장 자동 생성기"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pillow>=10.4.0",
    "pywin32>=306",
    "rich>=13.0.0",
    "html2image>=2.0.0",
    "jinja2>=3.1.0",
    "holidays>=0.46",
    "prompt-toolkit>=3.0.0",
    "flask>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.uv]
package = false
